--- a/src/Component/ParentPageNavBar/SlideNavBar/ParentPageNavBar.css
+++ b/src/Component/ParentPageNavBar/SlideNavBar/ParentPageNavBar.css
@@ -9,8 +9,18 @@
     .slide-1{
         display: none;
     }
+    .main-div{
+        height: 100% !important;
+    }
+    .time-section{
+        padding: 0!important;
+    }
 
 }
+.main-div{
+    height: 100%;
+}
+
 .logo-slide-bar{
     width: 60px;
 }
@@ -25,7 +35,6 @@
     position: absolute;
     width: 30px;
     margin-right: 20px;
-
     align-items: center;
 
 }
@@ -39,12 +48,24 @@
 
 }
 
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link{
+.nav-pills .nav-bar-link.active, .nav-pills .show>.nav-bar-link{
     background-color: #C9447E !important;
 }
-.nav-link:hover{
+.nav-bar-link:hover{
     color: white !important;
 }
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+.nav-pills .nav-bar-link.active, .nav-pills .show>.nav-bar-link {
     height: 70px;
+}
+.log-out-btn{
+    width: 60%;
+    color: white !important;
+    font-weight: bold !important;
+    border-radius: 20px !important;
+    background-color: #cd6f96 !important;
+    border: none!important;
+}
+
+.log-out-btn:hover{
+    background-color: #C9447E !important;
 }
