Updated files student and parent

--- a/src/View/ParentDashboardHome/ParentDashBoardHome.css
+++ b/src/View/ParentDashboardHome/ParentDashBoardHome.css
@@ -6,6 +6,16 @@
 .heading-bar-div {
     z-index: 1;
     margin-left: 200px;
+    width: 100%;
+}
+@media screen and (max-width: 991px) {
+    .heading-bar-div{
+        margin-left: 0;
+    }
+    .body-section{
+        margin-left: 72px !important;
+    }
+
 }
 
 .body-section {
