--- a/src/Component/ParentDashboardHome/HedingTitle/HeadingTitleHome.css
+++ b/src/Component/ParentDashboardHome/HedingTitle/HeadingTitleHome.css
@@ -3,3 +3,8 @@
     color: #C9447E;
     font-weight: bold;
 }
+@media screen and (max-width: 991px) {
+    .hed-title{
+        font-size: 18px;
+    }
+}
