--- a/src/Component/StudentDashBoardActivity/Activities/Activities.css
+++ b/src/Component/StudentDashBoardActivity/Activities/Activities.css
@@ -1,3 +1,25 @@
+.activity-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+
+.activity {
+    position: relative;
+    padding: 30px;
+    width: 70%;
+    height: 80%;
+    margin-top: 5%;
+    margin-left: 15%;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.3);
+}
+
 .input-jira {
     width: 100px;
     height: 50px;
@@ -31,12 +53,13 @@
     background-color: #cd6f96;
     color: white;
     margin-top: 40px;
-    border:none;
+    border: none;
     margin-right: 20px;
     font-weight: bold;
 
 }
-.activity-button:hover{
+
+.activity-button:hover {
     background-color: #C9447E;
 }
 
@@ -74,16 +97,16 @@
     background-color: darkmagenta;
 }
 
-.maths-activity-next-button{
+.maths-activity-next-button {
     margin-left: calc(50% - 86px);
 }
 
-.next-button{
+.next-button {
     padding: 10px 15px;
     border-radius: 10px;
     width: 150px;
     margin-top: 2px !important;
-    border:none;
+    border: none;
     margin-right: 0px;
     font-weight: bold;
 }
